--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Secret": "cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4"
+  "Secret": "cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4-cl4v3-r3-s3c43t4",
+  "ApiKey": "47b8917d2f87285fb9d5c378d38aed50"
 }
