--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefoultConnection": "Host=localhost;Database=AppMovil;Username=postgres;Password=admin"
+    "DefoultConnection": "Host=containers-us-west-110.railway.app; Database=railway; Username=postgres; Password=EkaR2slYx1V4jRmGD10X;PORT=6325"
   },
   "Logging": {
     "LogLevel": {
